--- a/ui/inventory.ui
+++ b/ui/inventory.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1012</width>
-    <height>849</height>
+    <width>1076</width>
+    <height>858</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -83,20 +83,10 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="1" colspan="3">
-       <widget class="QLineEdit" name="locationEntry"/>
-      </item>
       <item row="1" column="2">
        <widget class="QLabel" name="lengthInLabel">
         <property name="text">
          <string>Inches:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="7" column="3">
-       <widget class="QPushButton" name="createCookieButton">
-        <property name="text">
-         <string>Create Cookie</string>
         </property>
        </widget>
       </item>
@@ -124,144 +114,8 @@
       <item row="6" column="1">
        <widget class="QComboBox" name="dryingComboBox"/>
       </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="QGroupBox" name="inventoryFilterGroupBox">
-     <property name="title">
-      <string>Filter Inventory</string>
-     </property>
-     <layout class="QVBoxLayout" name="inventoryFilterMainLayout">
-      <item>
-       <widget class="QFrame" name="basicFilterFrame">
-        <property name="frameShape">
-         <enum>QFrame::StyledPanel</enum>
-        </property>
-        <property name="frameShadow">
-         <enum>QFrame::Raised</enum>
-        </property>
-        <layout class="QFormLayout" name="basicFilterLayout">
-         <item row="0" column="0">
-          <widget class="QLabel" name="speciesFilterLabel">
-           <property name="text">
-            <string>Species:</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="1">
-          <widget class="QLineEdit" name="speciesFilterEdit"/>
-         </item>
-         <item row="1" column="0">
-          <widget class="QLabel" name="locationFilterLabel">
-           <property name="text">
-            <string>Location:</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1">
-          <widget class="QLineEdit" name="locationFilterEdit"/>
-         </item>
-        </layout>
-       </widget>
-      </item>
-      <item>
-       <widget class="QFrame" name="numericFilterFrame">
-        <property name="frameShape">
-         <enum>QFrame::StyledPanel</enum>
-        </property>
-        <property name="frameShadow">
-         <enum>QFrame::Raised</enum>
-        </property>
-        <layout class="QFormLayout" name="numericFilterLayout">
-         <item row="0" column="0">
-          <widget class="QLabel" name="minLengthLabel">
-           <property name="text">
-            <string>Min Length (in):</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="1">
-          <widget class="QSpinBox" name="minLengthSpin">
-           <property name="minimum">
-            <number>0</number>
-           </property>
-           <property name="maximum">
-            <number>1000</number>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="0">
-          <widget class="QLabel" name="minDiameterLabel">
-           <property name="text">
-            <string>Min Diameter (in):</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1">
-          <widget class="QSpinBox" name="minDiameterSpin">
-           <property name="minimum">
-            <number>0</number>
-           </property>
-           <property name="maximum">
-            <number>100</number>
-           </property>
-          </widget>
-         </item>
-         <item row="2" column="0">
-          <widget class="QLabel" name="minCostLabel">
-           <property name="text">
-            <string>Min Cost ($):</string>
-           </property>
-          </widget>
-         </item>
-         <item row="2" column="1">
-          <widget class="QDoubleSpinBox" name="minCostSpin">
-           <property name="minimum">
-            <double>0.000000000000000</double>
-           </property>
-           <property name="maximum">
-            <double>10000.000000000000000</double>
-           </property>
-          </widget>
-         </item>
-         <item row="3" column="0">
-          <widget class="QLabel" name="minQualityLabel">
-           <property name="text">
-            <string>Min Quality:</string>
-           </property>
-          </widget>
-         </item>
-         <item row="3" column="1">
-          <widget class="QSpinBox" name="minQualitySpin">
-           <property name="minimum">
-            <number>0</number>
-           </property>
-           <property name="maximum">
-            <number>10</number>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </widget>
-      </item>
-      <item>
-       <layout class="QHBoxLayout" name="filterButtonLayout">
-        <item>
-         <widget class="QPushButton" name="applyFilterButton">
-          <property name="text">
-           <string>Apply Filter</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="clearFilterButton">
-          <property name="text">
-           <string>Clear Filter</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
+      <item row="5" column="1">
+       <widget class="QLineEdit" name="locationEntry"/>
       </item>
      </layout>
     </widget>
@@ -271,43 +125,23 @@
      <property name="tabPosition">
       <enum>QTabWidget::North</enum>
      </property>
+     <property name="currentIndex">
+      <number>0</number>
+     </property>
      <widget class="QWidget" name="logsTab">
       <attribute name="title">
        <string>Logs</string>
       </attribute>
       <layout class="QVBoxLayout">
        <item>
-        <widget class="QTableView" name="individualLogsTable"/>
-       </item>
-      </layout>
-     </widget>
-     <widget class="QWidget" name="groupedLogsTab">
-      <attribute name="title">
-       <string>Grouped Logs</string>
-      </attribute>
-      <layout class="QVBoxLayout">
-       <item>
-        <widget class="QTableView" name="groupedLogsTable"/>
-       </item>
-      </layout>
-     </widget>
-     <widget class="QWidget" name="lumberTab">
-      <attribute name="title">
-       <string>Lumber</string>
-      </attribute>
-      <layout class="QVBoxLayout">
-       <item>
-        <widget class="QTableView" name="lumberTable"/>
-       </item>
-      </layout>
-     </widget>
-     <widget class="QWidget" name="slabsTab">
-      <attribute name="title">
-       <string>Slabs</string>
-      </attribute>
-      <layout class="QVBoxLayout">
-       <item>
-        <widget class="QTableView" name="slabsTable"/>
+        <widget class="QTableView" name="logsTableView">
+         <property name="selectionMode">
+          <enum>QAbstractItemView::SingleSelection</enum>
+         </property>
+         <property name="selectionBehavior">
+          <enum>QAbstractItemView::SelectRows</enum>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
@@ -315,9 +149,29 @@
       <attribute name="title">
        <string>Cookies</string>
       </attribute>
-      <layout class="QVBoxLayout">
+      <layout class="QVBoxLayout" name="verticalLayout">
        <item>
-        <widget class="QTableView" name="cookiesTable"/>
+        <widget class="QTableView" name="cookiesTableView"/>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="slabsTab">
+      <attribute name="title">
+       <string>Live Edge Slabs</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <item>
+        <widget class="QTableView" name="slabsTableView"/>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="lumberTab">
+      <attribute name="title">
+       <string>Lumber</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout_3">
+       <item>
+        <widget class="QTableView" name="lumberTableView"/>
        </item>
       </layout>
      </widget>
@@ -325,12 +179,19 @@
       <attribute name="title">
        <string>Firewood</string>
       </attribute>
-      <layout class="QVBoxLayout">
+      <layout class="QVBoxLayout" name="verticalLayout_4">
        <item>
-        <widget class="QTableView" name="firewoodTable"/>
+        <widget class="QTableView" name="firewoodTableView"/>
        </item>
       </layout>
      </widget>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="detailedViewCheckBox">
+     <property name="text">
+      <string>Detailed View</string>
+     </property>
     </widget>
    </item>
    <item>
